Fixed small LaTex syntax errors

--- a/task3.tex
+++ b/task3.tex
@@ -53,7 +53,7 @@ This project task was to create an OLAP consisting of writing 4 different SQL qu
 
 The method used for verifying that the queries work as intended was a structured testing method. Each query was run against the database with some prepared mock data, and the results were reviewed to make sure they met all the specified requirements from the query descriptions as well as the Soundgood music school. The verification for this included checking and changing the output formatting, handling edge cases and confirming all logic. The expected output was also tested, initially with a small dataset when creating the queries and lastly with bigger datasets to make sure all edge cases and could be detected and tested against the expected output.
 
-When making the denormalized database we started by looking at the information that the database should contain. We quickly realized that there wasn't much data that needed to be stored and that we probably would be enough with creating a single table for said data. Minimizing the number of tables also makes the database more denormalized and ensures that you don't have to include as many \textbf{JOIN}:s later when making queries. We tried to consider what the database would be used for to determine how much we should denormalize it whilst still keeping it usable in a real-world scenario. Next, we made a diagram in Astah using our knowledge from previous tasks. We included notes and constraints to our data to make it as clear as possible. Implementing our database in SQL could also easily be made from our knowledge from previous tasks.
+When making the denormalized database we started by looking at the information that the database should contain. We quickly realized that there wasn't much data that needed to be stored and that we probably would be enough with creating a single table for said data. Minimizing the number of tables also makes the database more denormalized and ensures that you don't have to include as many \textbf{JOIN}:s later when making queries. We tried to consider what the database would be used for to determine how much we should denormalize it whilst still keeping it usable in a real-world scenario. For example, we decided to keep the student first and last name in separate columns. Next, we made a diagram in Astah using our knowledge from previous tasks. We included notes and constraints to our data to make it as clear as possible. Implementing our database in SQL could also easily be made from our knowledge from previous tasks.
 
 \section{Result}
 
@@ -174,9 +174,9 @@ No part of the database was changed or modified from the previous task to simpli
 
 Query 1 uses grouping and aggregation and is not computationally expensive enough, which can be seen using postgreSQL EXPLAIN, or by simply logically looking at the query, to justify a materialized view, however if the query is done frequently enough, a materialized view could help performance. It also uses no correlated subqueries.
     
-Query 2 uses "sibling_count" and "total_sibling_count" CTEs to break down the query int smaller logical steps for clarity. There exists an argument to have a materialized view since sibling counts are most likely almost static since siblings don't change unless a sibling quits the school or a new one joins. It uses grouping and summing instead of any correlated subqueries. This query uses a UNION ALL, but this is required since a student can appear in both the first and the second column of the table and not using a UNION ALL would not simplify the query but instead lead to incomplete results and losing data requested.
+Query 2 uses "sibling\_count" and "total\_sibling\_count" CTEs to break down the query int smaller logical steps for clarity. There exists an argument to have a materialized view since sibling counts are most likely almost static since siblings don't change unless a sibling quits the school or a new one joins. It uses grouping and summing instead of any correlated subqueries. This query uses a UNION ALL, but this is required since a student can appear in both the first and the second column of the table and not using a UNION ALL would not simplify the query but instead lead to incomplete results and losing data requested.
 
-Query 3 uses "lessons_this_month" to calculate total lessons this specific month and then uses that to filter based on the number of lessons. A materialized view would not be appropriate for this query since the number of lesson can change, especially if you are querying for the current month where scheduled lessons are customed to change. In this query all aggregations are handled using GROUP BY and JOIN and therefore avoids any correlated subqueries.
+Query 3 uses "lessons\_this\_month" to calculate total lessons this specific month and then uses that to filter based on the number of lessons. A materialized view would not be appropriate for this query since the number of lesson can change, especially if you are querying for the current month where scheduled lessons are customed to change. In this query all aggregations are handled using GROUP BY and JOIN and therefore avoids any correlated subqueries.
 
 Query 4 has two CTEs, one for next weeks ensembles and one for how many bookings/students booked each ensemble has to improve clarity and make the query more logical. The students booked CTE is used to calculate the number of available places from the maximum number of places at the lesson. A materialized view would not fit here since it queries the ensembles for next week, meaning the lessons and especially the number of students booked on a lesson are most likely to change. To avoid any correlated subqueries that would reduce performance this query uses a CASE statement and joins. 
 
