--- a/task3.tex
+++ b/task3.tex
@@ -43,6 +43,7 @@ It is furthermore declared that the solution below is a contribution by the proj
 
 \section{Introduction}
 
+The objective of this assignment is to implement a set of SQL queries to manage and analyze data inside the Soundgood Music School database. The requirements of this particular assignment encompass the implementation of online analytical processing. Furthermore, this assignment included the design and implementation of denormalized database for accessing historical records. 
 
 \section{Literature Study}
 Our primary source of information for this assignment was the PostgreSQL documentation available at \url{https://www.postgresql.org/docs/current/}. This provided valuable information and even examples on how to write different queries. The chapters 6 and 7 in the book also provided valuable information on how to structure the actual queries and how to work with the data. For example, \textbf{7.1 More Complex SQL Retrieval Queries} mentions uses of the different functions such as \textbf{SUM}, how to work with \textbf{GROUP BY}, joining tables, etc. They also provide very good examples with images and diagrams which further help to visualize the concepts.
@@ -197,5 +198,7 @@ In the figure below the query plan for the first query regarding the number of l
   \end{figure}
 
 \section{Comments About the Course}
+
+No real comments on the implementation of the assignment. However, it seems that the lecture on the inner workings of a DBMS could maybe be a bit better integrated with the assignments.
 
 \end{document}
